[package]
name = "wasm-hello-world"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
js-sys = "0.3.53"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.26"

[dependencies.web-sys]
version = "0.3.53"
features = ["DedicatedWorkerGlobalScope", "Worker", "WorkerOptions", "WorkerType"]

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "6ab9ac0f0f6853e1ceed8006a0ffe3a4c0c8323f" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "6ab9ac0f0f6853e1ceed8006a0ffe3a4c0c8323f" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "6ab9ac0f0f6853e1ceed8006a0ffe3a4c0c8323f" }
